fixed overlapping header issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -190,6 +190,7 @@ ol {
 
 main {
 	display: inherit;
+	margin-top: 250px;
 
 }
 
